added class Input for html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         var button = new Button("button test", function () {
             alert("button clicked");
         }, document.querySelector(".cont"));
+
+        var input = new Input("input test", document.querySelector(".cont"));
     </script>
 </body>
 </html>
