added CheckBox and Text

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         }, document.querySelector(".cont"));
 
         var input = new Input("input test", document.querySelector(".cont"));
+
+        var checkbox = new Checkbox("checkbox test", document.querySelector(".cont"));
+
+        var text = new Text("text test", document.querySelector(".cont"));
     </script>
 </body>
 </html>
